[package]
name = "actix-web-location"
version = "0.3.0"
description = "A extensible crate to provide location determination for actix-web, using GeoIP or other techniques"
license = "MPL-2.0"
edition = "2018"
documentation = "https://docs.rs/actix-web-location"
repository = "https://github.com/mozilla-services/common-rs"
homepage = "https://github.com/mozilla-services/common-rs/tree/master/actix-web-location"

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
actix-web-3 = { package = "actix-web", version = "3", optional = true }
actix-web-4 = { package = "actix-web", version = "=4.0.0-beta.8", optional = true }
futures = "0.3"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
maxminddb = { version = "0.20", optional = true}
cadence = { version = "0.26", optional = true}
actix-http-4 = { package = "actix-http", version = "=3.0.0-beta.9", optional = true }

[features]
maxmind = ["maxminddb"]
actix-web-v3 = ["actix-web-3"]
actix-web-v4 = ["actix-web-4", "actix-http-4"]
# cadence = [] - implied since cadence is optional above

[dev_dependencies]
actix-rt = "2.2"
