[package]
name = "actix-web-location"
version = "0.5.1"
description = "A extensible crate to provide location determination for actix-web, using GeoIP or other techniques"
license = "MPL-2.0"
edition = "2018"
documentation = "https://docs.rs/actix-web-location"
repository = "https://github.com/mozilla-services/common-rs"
homepage = "https://github.com/mozilla-services/common-rs/tree/master/actix-web-location"

[package.metadata.docs.rs]
# features that docs.rs will build with
features = ["actix-web-v4", "maxminddb"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
actix-web-3 = { package = "actix-web", version = "3", default-features = false, optional = true }
actix-web-4 = { package = "actix-web", version = "4", default-features = false, optional = true }
futures = "0.3"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
maxminddb = { version = "0.20", optional = true}
cadence = { version = "0.26", optional = true}

[features]
maxmind = ["maxminddb"]
actix-web-v3 = ["actix-web-3"]
actix-web-v4 = ["actix-web-4"]
# cadence = [] - implied since cadence is optional above

[dev_dependencies]
actix-rt = "2.2"
