[package]

name = "actix-web-location"
description = "A extensible crate to provide location determination for actix-web, using GeoIP or other techniques"
documentation = "https://docs.rs/actix-web-location"
repository = "https://github.com/mozilla-services/common-rs"
homepage = "https://github.com/mozilla-services/common-rs/tree/master/actix-web-location"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
# features that docs.rs will build with
features = ["actix-web-v4", "maxminddb"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
actix-web-3 = { package = "actix-web", version = "3", default-features = false, optional = true }
actix-web-4 = { package = "actix-web", version = "4", default-features = false, optional = true }
futures = "0.3"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
maxminddb = { version = "0.23", optional = true}
cadence = { version = "0.29", optional = true}

[features]
maxmind = ["maxminddb"]
actix-web-v3 = ["actix-web-3"]
actix-web-v4 = ["actix-web-4"]
# cadence = [] - implied since cadence is optional above

[dev_dependencies]
actix-rt = "2.2"
actix-web-4 = { package = "actix-web", version = "4" }
maxminddb = "0.23"

[[example]]
name = "maxmind"
required-features = ["actix-web-4", "maxmind"]
