[package]
name = "mozsvc-common"
version = "0.2.0"
authors = ["Philip Jenvey <pjenvey@underboss.org>"]
description = "Common utilities for Mozilla server side apps"
repository = "https://github.com/mozilla-services/common-rs/"
homepage = "https://github.com/mozilla-services/common-rs/"
license = "MPL-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "mozilla-services/common-rs" }

[dependencies]
lazy_static = "1.0"
hostname = "0.3"
reqwest = "0.11"
