[package]
name = "mozsvc-common"
authors = ["Philip Jenvey <pjenvey@underboss.org>"]
description = "Common utilities for Mozilla server side apps"
repository = "https://github.com/mozilla-services/common-rs/"
homepage = "https://github.com/mozilla-services/common-rs/"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lazy_static = "1.0"
hostname = "0.3"
reqwest = {version = "0.11", features = ["blocking"] }
