[package]
name = "tracing-actix-web-mozlog"
description = "Support for tracing in actix-web apps that target Mozilla's MozLog"
license = "MPL-2.0"
version = "0.5.0"
edition = "2021"
documentation = "https://docs.rs/tracing-actix-web-mozlog"
repository = "https://github.com/mozilla-services/common-rs"
homepage = "https://github.com/mozilla-services/common-rs/tree/master/tracing-actix-web-mozlog"

[dependencies]
chrono = "^0.4"
gethostname = "^0.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tracing = "^0.1"
tracing-bunyan-formatter = "^0.2" # 0.3+ alters traits
tracing-subscriber = "^0.2"  # 0.3 alters lifetimes
actix-web = { version = "4", default-features = false }
tracing-actix-web = { version = "0.5", default-features = false }
futures-util = "^0.3"
tracing-futures = { version = "^0.2", features = ["std-future"] }

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
maplit = "^1"
pretty_assertions = "^1.2"
jsonschema = "^0.15"
lazy_static = "^1.4"
actix-rt = "^2.2.0"
